modules/jpa/src/main/gen/com/explyt/jpa/ql/parser/JpqlParser.java
// This is a generated file. Not intended for manual editing.
package com.explyt.jpa.ql.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;

import static com.explyt.jpa.ql.psi.JpqlTypes.*;
import static com.explyt.jpa.ql.parser.JpqlParserUtil.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class JpqlParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, EXTENDS_SETS_);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return file(b, l + 1);
  }

  public static final TokenSet[] EXTENDS_SETS_ = new TokenSet[] {
    create_token_set_(FROM_CLAUSE, SUBQUERY_FROM_CLAUSE),
    create_token_set_(ADDITIVE_EXPRESSION, AGGREGATE_EXPRESSION, ALL_OR_ANY_EXPRESSION, BETWEEN_EXPRESSION,
      BOOLEAN_LITERAL, COALESCE_EXPRESSION, COLLECTION_MEMBER_EXPRESSION, COMPARISON_EXPRESSION,
      CONDITIONAL_AND_EXPRESSION, CONDITIONAL_NOT_EXPRESSION, CONDITIONAL_OR_EXPRESSION, CONSTRUCTOR_EXPRESSION,
      DATETIME_FUNCTION_EXPRESSION, DATETIME_LITERAL, EMPTY_COLLECTION_COMPARISON_EXPRESSION, EXISTS_EXPRESSION,
            EXPRESSION, FULLY_QUALIFIED_CONSTRUCTOR, FUNCTIONS_RETURNING_NUMERICS_EXPRESSION, FUNCTION_INVOCATION_EXPRESSION,
            GENERAL_CASE_EXPRESSION, INPUT_PARAMETER_EXPRESSION, IN_EXPRESSION, JOIN_EXPRESSION,
            LIKE_EXPRESSION, MAP_BASED_REFERENCE_EXPRESSION, MULTIPLICATIVE_EXPRESSION, NULLIF_EXPRESSION,
            NULL_COMPARISON_EXPRESSION, NULL_EXPRESSION, NUMERIC_LITERAL, OBJECT_EXPRESSION,
            PAREN_EXPRESSION, PATH_REFERENCE_EXPRESSION, REFERENCE_EXPRESSION, SIMPLE_CASE_EXPRESSION,
            STRING_FUNCTION_EXPRESSION, STRING_LITERAL, SUBQUERY_EXPRESSION, TYPE_EXPRESSION,
            UNARY_ARITHMETIC_EXPRESSION),
  };

  /* ********************************************************** */
  // [AS] identifier
  public static boolean alias_declaration(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "alias_declaration")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ALIAS_DECLARATION, "<alias declaration>");
    r = alias_declaration_0(b, l + 1);
    r = r && identifier(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // [AS]
  private static boolean alias_declaration_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "alias_declaration_0")) return false;
    consumeToken(b, AS);
    return true;
  }

  /* ********************************************************** */
  // input_parameter_expression
  //     | case_expression
  //     | boolean_literal
  //     | function_invocation_expression
  //     | reference_expression
  static boolean boolean_expression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "boolean_expression")) return false;
    boolean r;
    r = input_parameter_expression(b, l + 1);
    if (!r) r = expression(b, l + 1, 8);
    if (!r) r = boolean_literal(b, l + 1);
    if (!r) r = function_invocation_expression(b, l + 1);
    if (!r) r = reference_expression(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // reference_expression | type_expression
  public static boolean case_operand(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "case_operand")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CASE_OPERAND, "<case operand>");
    r = reference_expression(b, l + 1);
    if (!r) r = type_expression(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // IN '(' reference_expression ')' alias_declaration
  public static boolean collection_member_declaration(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "collection_member_declaration")) return false;
    if (!nextTokenIs(b, IN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, IN, LPAREN);
    r = r && reference_expression(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    r = r && alias_declaration(b, l + 1);
    exit_section_(b, m, COLLECTION_MEMBER_DECLARATION, r);
    return r;
  }

  /* ********************************************************** */
  // '=' | '>' | '>=' | '<' | '<=' | '<>'
  static boolean comparison_operator(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "comparison_operator")) return false;
    boolean r;
    r = consumeToken(b, EQ);
    if (!r) r = consumeToken(b, GT);
    if (!r) r = consumeToken(b, GTE);
    if (!r) r = consumeToken(b, LT);
    if (!r) r = consumeToken(b, LTE);
    if (!r) r = consumeToken(b, NEQ);
    return r;
  }

  /* ********************************************************** */
  // expression {',' expression}*
  public static boolean constructor_arguments_list(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constructor_arguments_list")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CONSTRUCTOR_ARGUMENTS_LIST, "<constructor arguments list>");
    r = expression(b, l + 1, -1);
    r = r && constructor_arguments_list_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // {',' expression}*
  private static boolean constructor_arguments_list_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constructor_arguments_list_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!constructor_arguments_list_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "constructor_arguments_list_1", c)) break;
    }
    return true;
  }

  // ',' expression
  private static boolean constructor_arguments_list_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constructor_arguments_list_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && expression(b, l + 1, -1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // NEW fully_qualified_constructor '(' constructor_arguments_list ')'
  public static boolean constructor_expression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constructor_expression")) return false;
    if (!nextTokenIs(b, NEW)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, NEW);
      r = r && fully_qualified_constructor(b, l + 1);
    r = r && consumeToken(b, LPAREN);
    r = r && constructor_arguments_list(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    exit_section_(b, m, CONSTRUCTOR_EXPRESSION, r);
    return r;
  }

  /* ********************************************************** */
  // input_parameter_expression
  //     | datetime_function_expression
  //     | aggregate_expression
  //     | case_expression
  //     | datetime_literal
  //     | function_invocation_expression
  //     | reference_expression
  static boolean datetime_expression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "datetime_expression")) return false;
    boolean r;
    r = input_parameter_expression(b, l + 1);
    if (!r) r = datetime_function_expression(b, l + 1);
    if (!r) r = aggregate_expression(b, l + 1);
    if (!r) r = expression(b, l + 1, 8);
    if (!r) r = datetime_literal(b, l + 1);
    if (!r) r = function_invocation_expression(b, l + 1);
    if (!r) r = reference_expression(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // CURRENT_DATE
  //     | CURRENT_TIME
  //     | CURRENT_TIMESTAMP
  static boolean datetime_function(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "datetime_function")) return false;
    boolean r;
    r = consumeToken(b, CURRENT_DATE);
    if (!r) r = consumeToken(b, CURRENT_TIME);
    if (!r) r = consumeToken(b, CURRENT_TIMESTAMP);
    return r;
  }

  /* ********************************************************** */
  // DELETE FROM entity_access
  public static boolean delete_clause(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "delete_clause")) return false;
    if (!nextTokenIs(b, DELETE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, DELETE, FROM);
    r = r && entity_access(b, l + 1);
    exit_section_(b, m, DELETE_CLAUSE, r);
    return r;
  }

  /* ********************************************************** */
  // delete_clause [where_clause]
  public static boolean delete_statement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "delete_statement")) return false;
    if (!nextTokenIs(b, DELETE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = delete_clause(b, l + 1);
    r = r && delete_statement_1(b, l + 1);
    exit_section_(b, m, DELETE_STATEMENT, r);
    return r;
  }

  // [where_clause]
  private static boolean delete_statement_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "delete_statement_1")) return false;
    where_clause(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // IN reference_expression
  public static boolean derived_collection_member_declaration(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "derived_collection_member_declaration")) return false;
    if (!nextTokenIs(b, IN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IN);
    r = r && reference_expression(b, l + 1);
    exit_section_(b, m, DERIVED_COLLECTION_MEMBER_DECLARATION, r);
    return r;
  }

  /* ********************************************************** */
  // identifier [alias_declaration]
  public static boolean entity_access(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "entity_access")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ENTITY_ACCESS, "<entity access>");
    r = identifier(b, l + 1);
    r = r && entity_access_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // [alias_declaration]
  private static boolean entity_access_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "entity_access_1")) return false;
    alias_declaration(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // reference_expression
  //     | identifier
  //     | input_parameter_expression
  //     | literal
  static boolean entity_or_value_expression(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "entity_or_value_expression")) return false;
    boolean r;
    r = reference_expression(b, l + 1);
    if (!r) r = identifier(b, l + 1);
    if (!r) r = input_parameter_expression(b, l + 1);
    if (!r) r = literal(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // numeric_or_input_parameter [PERCENT]
  public static boolean fetchCountOrPercent(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "fetchCountOrPercent")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FETCH_COUNT_OR_PERCENT, "<fetch count or percent>");
    r = numeric_or_input_parameter(b, l + 1);
    r = r && fetchCountOrPercent_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // [PERCENT]
  private static boolean fetchCountOrPercent_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "fetchCountOrPercent_1")) return false;
    consumeToken(b, PERCENT);
    return true;
  }

  /* ********************************************************** */
  // <<isHql>> FETCH (FIRST | NEXT) fetchCountOrPercent (ROW | ROWS) (ONLY | WITH TIES)
  public static boolean fetch_clause(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "fetch_clause")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FETCH_CLAUSE, "<fetch clause>");
    r = isHql(b, l + 1);
    r = r && consumeToken(b, FETCH);
    r = r && fetch_clause_2(b, l + 1);
    r = r && fetchCountOrPercent(b, l + 1);
    r = r && fetch_clause_4(b, l + 1);
    r = r && fetch_clause_5(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // FIRST | NEXT
  private static boolean fetch_clause_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "fetch_clause_2")) return false;
    boolean r;
    r = consumeToken(b, FIRST);
    if (!r) r = consumeToken(b, NEXT);
    return r;
  }

  // ROW | ROWS
  private static boolean fetch_clause_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "fetch_clause_4")) return false;
    boolean r;
    r = consumeToken(b, ROW);
    if (!r) r = consumeToken(b, ROWS);
    return r;
  }

  // ONLY | WITH TIES
  private static boolean fetch_clause_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "fetch_clause_5")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ONLY);
    if (!r) r = parseTokens(b, 0, WITH, TIES);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // semicolon_delimited_statements | statement
  static boolean file(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "file")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = semicolon_delimited_statements(b, l + 1);
    if (!r) r = statement(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // FROM identification_variable_declaration {',' {identification_variable_declaration | collection_member_declaration}}*
  public static boolean from_clause(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "from_clause")) return false;
    if (!nextTokenIs(b, FROM)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, FROM_CLAUSE, null);
    r = consumeToken(b, FROM);
    p = r; // pin = FROM
    r = r && report_error_(b, identification_variable_declaration(b, l + 1));
    r = p && from_clause_2(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // {',' {identification_variable_declaration | collection_member_declaration}}*
  private static boolean from_clause_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "from_clause_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!from_clause_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "from_clause_2", c)) break;
    }
    return true;
  }

  // ',' {identification_variable_declaration | collection_member_declaration}
  private static boolean from_clause_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "from_clause_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && from_clause_2_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // identification_variable_declaration | collection_member_declaration
  private static boolean from_clause_2_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "from_clause_2_0_1")) return false;
    boolean r;
    r = identification_variable_declaration(b, l + 1);
    if (!r) r = collection_member_declaration(b, l + 1);
    return r;
  }
    
    /* ********************************************************** */
    // {identifier '.'}* identifier
    public static boolean fully_qualified_constructor(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "fully_qualified_constructor")) return false;
        boolean r;
        Marker m = enter_section_(b, l, _NONE_, FULLY_QUALIFIED_CONSTRUCTOR, "<fully qualified constructor>");
        r = fully_qualified_constructor_0(b, l + 1);
        r = r && identifier(b, l + 1);
        exit_section_(b, l, m, r, false, null);
        return r;
    }
    
    // {identifier '.'}*
    private static boolean fully_qualified_constructor_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "fully_qualified_constructor_0")) return false;
        while (true) {
            int c = current_position_(b);
            if (!fully_qualified_constructor_0_0(b, l + 1)) break;
            if (!empty_element_parsed_guard_(b, "fully_qualified_constructor_0", c)) break;
        }
        return true;
    }
    
    // identifier '.'
    private static boolean fully_qualified_constructor_0_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "fully_qualified_constructor_0_0")) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = identifier(b, l + 1);
        r = r && consumeToken(b, DOT);
        exit_section_(b, m, null, r);
        return r;
    }

  /* ********************************************************** */
  // literal_group
  //     | scalar_expression
  public static boolean function_arg(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_arg")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FUNCTION_ARG, "<function arg>");
    r = expression(b, l + 1, 3);
    if (!r) r = scalar_expression(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // GROUP BY groupby_item {',' groupby_item}*
  public static boolean groupby_clause(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "groupby_clause")) return false;
    if (!nextTokenIs(b, GROUP)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, GROUP, BY);
    r = r && groupby_item(b, l + 1);
    r = r && groupby_clause_3(b, l + 1);
    exit_section_(b, m, GROUPBY_CLAUSE, r);
    return r;
  }

  // {',' groupby_item}*
  private static boolean groupby_clause_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "groupby_clause_3")) return false;
    while (true) {
      int c = current_position_(b);
      if (!groupby_clause_3_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "groupby_clause_3", c)) break;
    }
    return true;
  }

  // ',' groupby_item
  private static boolean groupby_clause_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "groupby_clause_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && groupby_item(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // reference_expression | identifier
  public static boolean groupby_item(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "groupby_item")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, GROUPBY_ITEM, "<groupby item>");
    r = reference_expression(b, l + 1);
    if (!r) r = identifier(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // HAVING expression
  public static boolean having_clause(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "having_clause")) return false;
    if (!nextTokenIs(b, HAVING)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, HAVING);
    r = r && expression(b, l + 1, -1);
    exit_section_(b, m, HAVING_CLAUSE, r);
    return r;
  }
